<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="250dp"
    android:layout_height="match_parent">

    <!--<ImageView-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/launcher_icon"-->
        <!--android:src="@drawable/launcher_icon"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/advertisement"
        android:background="@color/red_color"
        android:padding="10dp"
        android:textSize="@dimen/menu_text_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/advertisement">


    <TextView
        android:text="@string/provider_resisteration"
        android:textColor="@color/red_color"
        android:padding="10dp"
        android:textSize="@dimen/menu_text_size"
        android:id="@+id/btnProviderRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_color"/>
    <TextView
        android:padding="10dp"
        android:text="@string/patient_resisteration"
        android:textColor="@color/red_color"
        android:textSize="@dimen/menu_text_size"
        android:id="@+id/btnPatientRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_color"/>

    <TextView
        android:padding="10dp"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:textColor="@color/red_color"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_color"/>

    <TextView
        android:padding="10dp"
        android:text="@string/find_nearby"
        android:textColor="@color/red_color"
        android:textSize="@dimen/menu_text_size"
        android:id="@+id/btnFacilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/red_color"/>
    <TextView
        android:padding="10dp"
        android:text="@string/market"
        android:textColor="@color/red_color"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>